--- a/src/templates/settings.tmpl.html
+++ b/src/templates/settings.tmpl.html
@@ -13,19 +13,14 @@
     <md-dialog-content>
       <div class="md-dialog-content">
         <h2>Quiz</h2>
-        <md-autocomplete
-          md-selected-item="selectedItem"
-          md-items="item in repos"
-          md-item-text="item.name"
-          md-min-length="0"
-          placeholder="Choose quiz"
-          md-selected-item-change="customUrl = null"
+        <md-autocomplete md-selected-item="selectedItem" md-items="item in repos" md-item-text="item.name"
+          md-min-length="0" placeholder="Choose quiz" md-selected-item-change="customUrl = null"
           md-menu-class="autocomplete-custom-template">
           <md-item-template>
-                      <span class="item-title">
-                        <md-icon mb-font-set="md">question_answer</md-icon>
-                        <span> {{item.name}} </span>
-                      </span>
+            <span class="item-title">
+              <md-icon mb-font-set="md">question_answer</md-icon>
+              <span> {{item.name}} </span>
+            </span>
           </md-item-template>
         </md-autocomplete>
         <h2>Custom quiz</h2>
@@ -36,8 +31,8 @@
         <h2>Question set count</h2>
         <md-slider-container>
           <md-icon mb-font-set="md">brightness_low</md-icon>
-          <md-slider min="1" max="[[ quiz.getQuestions().length ]]" ng-model="setLimit"
-                     aria-label="Question set count" flex md-discrete></md-slider>
+          <md-slider min="1" max="[[ quiz.getQuestions().length ]]" ng-model="setLimit" aria-label="Question set count"
+            flex md-discrete></md-slider>
           <md-input-container>
             <input flex type="number" ng-model="setLimit" aria-label="green" aria-controls="green-slider">
           </md-input-container>
@@ -45,8 +40,7 @@
         <h2>Quiz time limit in min.</h2>
         <md-slider-container>
           <md-icon mb-font-set="md">brightness_low</md-icon>
-          <md-slider min="1" max="1440" ng-model="timeLimit" aria-label="Quiz time limit" flex
-                     md-discrete></md-slider>
+          <md-slider min="1" max="1440" ng-model="timeLimit" aria-label="Quiz time limit" flex md-discrete></md-slider>
           <md-input-container>
             <input flex type="number" ng-model="timeLimit" aria-label="green" aria-controls="green-slider">
           </md-input-container>
@@ -66,6 +60,10 @@
         <md-button class="md-raised md-primary" ng-click="dropCorrect()">
           Drop answered questions
         </md-button>
+        <h2>Hide alert</h2>
+        <md-checkbox ng-model="hideAlert" aria-label="Hide alert">
+          Hide alert: [[ hideAlert ]]
+        </md-checkbox>
         <section ng-show="debugMode">
           <h2>Debug mode</h2>
           <md-checkbox ng-model="debugMode" aria-label="Debug mode">
