--- a/src/templates/settings.tmpl.html
+++ b/src/templates/settings.tmpl.html
@@ -2,7 +2,7 @@
   <form ng-cloak>
     <md-toolbar>
       <div class="md-toolbar-tools">
-        <h2>Quiz settings</h2>
+        <h2>Quiz client settings</h2>
         <span flex></span>
         <md-button class="md-icon-button" ng-click="close()">
           <md-icon mb-font-set="md">close</md-icon>
@@ -12,69 +12,86 @@
 
     <md-dialog-content>
       <div class="md-dialog-content">
-        <h2>Quiz</h2>
-        <md-autocomplete md-selected-item="selectedItem" md-items="item in repos" md-item-text="item.name"
-          md-min-length="0" placeholder="Choose quiz" md-selected-item-change="customUrl = null"
-          md-menu-class="autocomplete-custom-template">
-          <md-item-template>
-            <span class="item-title">
-              <md-icon mb-font-set="md">question_answer</md-icon>
-              <span> {{item.name}} </span>
-            </span>
-          </md-item-template>
-        </md-autocomplete>
-        <h2>Custom quiz</h2>
-        <md-input-container md-no-float class="md-block">
-          <md-icon mb-font-set="md">cloud_upload</md-icon>
-          <input ng-model="customUrl" ng-click="selectedItem = null" type="text" placeholder="Enter absolute url">
-        </md-input-container>
-        <h2>Question set count</h2>
-        <md-slider-container>
-          <md-icon mb-font-set="md">brightness_low</md-icon>
-          <md-slider min="1" max="[[ quiz.getQuestions().length ]]" ng-model="setLimit" aria-label="Question set count"
-            flex md-discrete></md-slider>
-          <md-input-container>
-            <input flex type="number" ng-model="setLimit" aria-label="green" aria-controls="green-slider">
+        <md-nav-bar md-selected-nav-item="pageNumber" nav-bar-aria-label="navigation links">
+          <md-nav-item md-nav-click="goto('quiz')" name="quiz">
+            Quiz
+          </md-nav-item>
+          <md-nav-item md-nav-click="goto('other')" name="other">
+            Other
+          </md-nav-item>
+        </md-nav-bar>
+        <div ng-show="pageNumber == 'quiz'">
+          <h2>Quiz</h2>
+          <md-autocomplete md-selected-item="selectedItem" md-items="item in repos" md-item-text="item.name"
+            md-min-length="0" placeholder="Choose quiz" md-selected-item-change="customUrl = null"
+            md-menu-class="autocomplete-custom-template">
+            <md-item-template>
+              <span class="item-title">
+                <md-icon mb-font-set="md">question_answer</md-icon>
+                <span> {{item.name}} </span>
+              </span>
+            </md-item-template>
+          </md-autocomplete>
+          <h2>Custom quiz</h2>
+          <md-input-container md-no-float class="md-block">
+            <md-icon mb-font-set="md">cloud_upload</md-icon>
+            <input ng-model="customUrl" ng-click="selectedItem = null" type="text" placeholder="Enter absolute url">
           </md-input-container>
-        </md-slider-container>
-        <h2>Quiz time limit in min.</h2>
-        <md-slider-container>
-          <md-icon mb-font-set="md">brightness_low</md-icon>
-          <md-slider min="1" max="1440" ng-model="timeLimit" aria-label="Quiz time limit" flex md-discrete></md-slider>
-          <md-input-container>
-            <input flex type="number" ng-model="timeLimit" aria-label="green" aria-controls="green-slider">
-          </md-input-container>
-        </md-slider-container>
-        <h2>Shuffle questions</h2>
-        <md-checkbox ng-model="shuffleQuestions" aria-label="Shuffle questions">
-          Shuffle questions: [[ shuffleQuestions ]]
-        </md-checkbox>
-        <h2>Shuffle answers</h2>
-        <md-checkbox ng-model="shuffleAnswers" aria-label="Shuffle answers">
-          Shuffle answers: [[ shuffleAnswers ]]
-        </md-checkbox>
-        <h2>Skip </h2>
-        <md-checkbox ng-model="skipCorrect" aria-label="Hide questions answered correctly">
-          Hide questions answered correctly: [[ skipCorrect ]]
-        </md-checkbox>
-        <md-button class="md-raised md-primary" ng-click="dropCorrect()">
-          Drop answered questions
-        </md-button>
-        <h2>Hide alert</h2>
-        <md-checkbox ng-model="hideAlert" aria-label="Hide alert">
-          Hide alert: [[ hideAlert ]]
-        </md-checkbox>
-        <section ng-show="debugMode">
-          <h2>Debug mode</h2>
-          <md-checkbox ng-model="debugMode" aria-label="Debug mode">
-            Debug mode: [[ debugMode ]]
+          <h2>Question set count</h2>
+          <md-slider-container>
+            <md-icon mb-font-set="md">brightness_low</md-icon>
+            <md-slider min="1" max="[[ quiz.getQuestions().length ]]" ng-model="setLimit"
+              aria-label="Question set count" flex md-discrete></md-slider>
+            <md-input-container>
+              <input flex type="number" ng-model="setLimit" aria-label="green" aria-controls="green-slider">
+            </md-input-container>
+          </md-slider-container>
+          <h2>Quiz time limit in min.</h2>
+          <md-slider-container>
+            <md-icon mb-font-set="md">brightness_low</md-icon>
+            <md-slider min="1" max="1440" ng-model="timeLimit" aria-label="Quiz time limit" flex md-discrete>
+            </md-slider>
+            <md-input-container>
+              <input flex type="number" ng-model="timeLimit" aria-label="green" aria-controls="green-slider">
+            </md-input-container>
+          </md-slider-container>
+          <h2>Shuffle questions</h2>
+          <md-checkbox ng-model="shuffleQuestions" aria-label="Shuffle questions">
+            Shuffle questions: [[ shuffleQuestions ]]
           </md-checkbox>
-        </section>
-        <h2>Enter cheat code</h2>
-        <md-input-container md-no-float class="md-block">
-          <md-icon mb-font-set="md">code</md-icon>
-          <input ng-model="cheat" type="text" placeholder="Cheat code">
-        </md-input-container>
+          <h2>Shuffle answers</h2>
+          <md-checkbox ng-model="shuffleAnswers" aria-label="Shuffle answers">
+            Shuffle answers: [[ shuffleAnswers ]]
+          </md-checkbox>
+          <h2>Skip </h2>
+          <md-checkbox ng-model="skipCorrect" aria-label="Hide questions answered correctly">
+            Hide questions answered correctly: [[ skipCorrect ]]
+          </md-checkbox>
+          <md-button class="md-raised md-primary" ng-click="dropCorrect()">
+            Drop answered questions
+          </md-button>
+        </div>
+        <div ng-show="pageNumber == 'other'">
+          <h2>Theme (WIP)</h2>
+          <md-switch class="md-primary" aria-label="Light or Dark" ng-model="theme" ng-disabled="true">
+            [[ theme ? 'Light' : 'Dark' ]]
+          </md-switch>
+          <h2>Hide alert</h2>
+          <md-checkbox ng-model="hideAlert" aria-label="Hide alert">
+            Hide alert: [[ hideAlert ]]
+          </md-checkbox>
+          <section ng-show="debugMode">
+            <h2>Debug mode</h2>
+            <md-checkbox ng-model="debugMode" aria-label="Debug mode">
+              Debug mode: [[ debugMode ]]
+            </md-checkbox>
+          </section>
+          <h2>Enter cheat code</h2>
+          <md-input-container md-no-float class="md-block">
+            <md-icon mb-font-set="md">code</md-icon>
+            <input ng-model="cheat" type="text" placeholder="Cheat code">
+          </md-input-container>
+        </div>
       </div>
     </md-dialog-content>
 
