--- a/src/templates/settings.tmpl.html
+++ b/src/templates/settings.tmpl.html
@@ -1,4 +1,4 @@
-<md-dialog aria-label="Settings">
+<md-dialog aria-label="Settings" flex="50">
   <form ng-cloak>
     <md-toolbar>
       <div class="md-toolbar-tools">
@@ -16,6 +16,9 @@
           <md-nav-item md-nav-click="goto('quiz')" name="quiz">
             Quiz
           </md-nav-item>
+          <md-nav-item md-nav-click="goto('settings')" name="settings">
+            Settings
+          </md-nav-item>
           <md-nav-item md-nav-click="goto('other')" name="other">
             Other
           </md-nav-item>
@@ -23,20 +26,30 @@
         <div ng-show="pageNumber == 'quiz'">
           <h2>Quiz</h2>
           <md-autocomplete md-selected-item="selectedItem" md-items="item in repos" md-item-text="item.name"
-            md-min-length="0" placeholder="Choose quiz" md-selected-item-change="customUrl = null"
-            md-menu-class="autocomplete-custom-template">
+            md-min-length="0" placeholder="Choose quiz" md-menu-class="autocomplete-custom-template">
             <md-item-template>
               <span class="item-title">
                 <md-icon mb-font-set="md">question_answer</md-icon>
-                <span> {{item.name}} </span>
+                <span>{{item.name}}</span>
               </span>
             </md-item-template>
           </md-autocomplete>
-          <h2>Custom quiz</h2>
-          <md-input-container md-no-float class="md-block">
-            <md-icon mb-font-set="md">cloud_upload</md-icon>
-            <input ng-model="customUrl" ng-click="selectedItem = null" type="text" placeholder="Enter absolute url">
-          </md-input-container>
+          <div ng-show="selectedItem.type == 'text'">
+            <h2>Custom quiz (Manual)</h2>
+            <md-input-container md-no-float class="md-block">
+              <md-icon mb-font-set="md">cloud_upload</md-icon>
+              <textarea ng-model="customJson" placeholder="Enter json" rows="3" md-resize-textarea></textarea>
+            </md-input-container>
+          </div>
+          <div ng-show="selectedItem.type == 'url'">
+            <h2>Custom quiz (URL)</h2>
+            <md-input-container md-no-float class="md-block">
+              <md-icon mb-font-set="md">cloud_upload</md-icon>
+              <input ng-model="customUrl" type="text" placeholder="Enter absolute url">
+            </md-input-container>
+          </div>
+        </div>
+        <div ng-show="pageNumber == 'settings'">
           <h2>Question set count</h2>
           <md-slider-container>
             <md-icon mb-font-set="md">brightness_low</md-icon>
@@ -73,7 +86,7 @@
         </div>
         <div ng-show="pageNumber == 'other'">
           <h2>Theme (WIP)</h2>
-          <md-switch class="md-primary" aria-label="Light or Dark" ng-model="theme" ng-disabled="true">
+          <md-switch class="md-primary" aria-label="Light or Dark" ng-model="theme">
             [[ theme ? 'Light' : 'Dark' ]]
           </md-switch>
           <h2>Hide alert</h2>
