--- a/src/templates/settings.tmpl.html
+++ b/src/templates/settings.tmpl.html
@@ -12,7 +12,7 @@
 
     <md-dialog-content>
       <div class="md-dialog-content">
-        <md-nav-bar md-selected-nav-item="pageNumber" nav-bar-aria-label="navigation links">
+        <md-nav-bar md-no-ink-bar="true" md-selected-nav-item="pageNumber" nav-bar-aria-label="navigation links">
           <md-nav-item md-nav-click="goto('quiz')" name="quiz">
             Quiz
           </md-nav-item>
