--- a/src/app.scss
+++ b/src/app.scss
@@ -3,12 +3,15 @@
 @import "~intro.js/minified/introjs.min.css";
 @import "~highlight.js/styles/github.css";
 
-
 md-progress-circular {
   position: absolute;
   left: 0;
   top: 0;
   z-index: 99999;
+}
+
+.navigation {
+  margin-top: 20px;
 }
 
 .jfk-bubble,
